force-app/main/default/objects/Resident_Assessment__c/Resident_Assessment__c.object-meta.xml
<CustomObject>
    <label>Resident Assessment</label>
    <pluralLabel>Resident Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <displayFormat>RA-{000000}</displayFormat>
        <label>Resident Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>