force-app/main/default/objects/Resident_Assessment__c/fields/Accommodation_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_Recommendations__c</fullName>
    <label>Accommodation Recommendations</label>
    <type>TextArea</type>
    <inlineHelpText>Accommodation recommendations</inlineHelpText>
</CustomField>