force-app/main/default/objects/Resident_Assessment__c/fields/Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Date__c</fullName>
    <label>Assessment Date</label>
    <type>DateTime</type>
    <description>Date and time of assessment</description>
</CustomField>