force-app/main/default/objects/Resident_Assessment__c/fields/Assessor__c.field-meta.xml
<CustomField>
    <fullName>Assessor__c</fullName>
    <label>Assessor</label>
    <type>Lookup</type>
    <description>Person conducting the assessment</description>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Resident_Assessments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>