force-app/main/default/objects/Resident_Assessment__c/fields/Falls_Risk__c.field-meta.xml
<CustomField>
    <fullName>Falls_Risk__c</fullName>
    <label>Falls Risk</label>
    <type>Picklist</type>
    <inlineHelpText>Risk of falling</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Very High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>