force-app/main/default/objects/Resident_Assessment__c/fields/Follow_Up_Required__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Required__c</fullName>
    <label>Follow Up Required</label>
    <type>Checkbox</type>
    <description>Is follow up assessment needed</description>
    <defaultValue>false</defaultValue>
</CustomField>