force-app/main/default/objects/Resident_Assessment__c/fields/Medical_Needs_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Medical_Needs_Assessment__c</fullName>
    <label>Medical Needs Assessment</label>
    <type>LongTextArea</type>
    <length>10000</length>
    <inlineHelpText>Medical needs assessment findings</inlineHelpText>
</CustomField>