force-app/main/default/objects/Resident_Assessment__c/fields/Mental_Health_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Mental_Health_Assessment__c</fullName>
    <label>Mental Health Assessment</label>
    <type>LongTextArea</type>
    <length>10000</length>
    <inlineHelpText>Mental health assessment findings</inlineHelpText>
</CustomField>