force-app/main/default/objects/Resident_Assessment__c/fields/Mobility_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Mobility_Assessment__c</fullName>
    <label>Mobility Assessment</label>
    <type>LongTextArea</type>
    <length>10000</length>
    <inlineHelpText>Mobility assessment findings</inlineHelpText>
</CustomField>