force-app/main/default/objects/Resident_Assessment__c/fields/Nutrition_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Nutrition_Assessment__c</fullName>
    <label>Nutrition Assessment</label>
    <type>LongTextArea</type>
    <length>10000</length>
    <inlineHelpText>Nutrition assessment findings</inlineHelpText>
</CustomField>