force-app/main/default/objects/Resident_Assessment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <description>Related opportunity</description>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Resident_Assessments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>