force-app/main/default/objects/Resident_Assessment__c/fields/Overall_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Overall_Outcome__c</fullName>
    <label>Overall Outcome</label>
    <type>Picklist</type>
    <inlineHelpText>Overall assessment outcome</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suitable - No Concerns</fullName>
            </value>
            <value>
                <fullName>Suitable - Minor Concerns</fullName>
            </value>
            <value>
                <fullName>Suitable - Requires Specialist Support</fullName>
            </value>
            <value>
                <fullName>Requires Further Assessment</fullName>
            </value>
            <value>
                <fullName>Not Suitable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>