force-app/main/default/objects/Resident_Assessment__c/fields/Personal_Care_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Personal_Care_Assessment__c</fullName>
    <label>Personal Care Assessment</label>
    <type>LongTextArea</type>
    <length>10000</length>
    <inlineHelpText>Personal care assessment findings</inlineHelpText>
</CustomField>