force-app/main/default/objects/Resident_Assessment__c/fields/Resident__c.field-meta.xml
<CustomField>
    <fullName>Resident__c</fullName>
    <label>Resident</label>
    <type>Lookup</type>
    <description>Person being assessed</description>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Resident_Assessments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>