force-app/main/default/objects/Resident_Assessment__c/fields/Social_Needs_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Social_Needs_Assessment__c</fullName>
    <label>Social Needs Assessment</label>
    <type>LongTextArea</type>
    <length>10000</length>
    <inlineHelpText>Social needs assessment findings</inlineHelpText>
</CustomField>